# Attendance-Bot

./: README.md  ShiftBot.py  admin.json  bg.py  con.json  main.py  poll_data.json  pyproject.toml  replit_zip_error_log.txt
game/: tictactoe.py  twentyone.py
